--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Limmy's Swearing Xylophone</title>
+	<title>Brian's Xylophone</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#333333">
 	<link rel="stylesheet" type="text/css" href="xylophone.css?v=5" />
